--- a/core/templates/agenda.html
+++ b/core/templates/agenda.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda</title>
-</head>
-<body>
+{% extends "model-page.html"%}
 
+{% block content %}
     <h2>Agendamentos</h2>
 
-    <ul>
-    {% for evento in eventos %}
-        <li> {{ evento.title }} - {{ evento.get_event_data }} </li>
-    {% endfor %}
+    <ul style="font-size: 18px;">
+        {% for evento in eventos %}
+            <li> {{ evento.title }} - {{ evento.get_event_data }} </li>
+        {% endfor %}
     </ul>
-
-
-</body>
-</html>
+{% endblock  %}
