--- a/core/templates/agenda.html
+++ b/core/templates/agenda.html
@@ -11,7 +11,7 @@
 
     <ul>
     {% for evento in eventos %}
-        <li> {{ evento.title }} - {{ evento.event_date }} </li>
+        <li> {{ evento.title }} - {{ evento.get_event_data }} </li>
     {% endfor %}
     </ul>
 
